--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta charset="UTF-8">
-        <meta name="description" content="Computer Science Engineering Student. I can also write great meta descriptions.">
+        <meta name="description" content="Computer Science Engineering Student. Meta Master.">
         <meta name="keywords" content="Amit Binny Joseph,Amit Joseph,amitbj96,amit0,amitbj,amith,amith joseph,binny joseph,joseph,amal jothi college of engineering,ajce,engineer,computer science,cse">
         <meta name="author" content="Amit Joseph">
         <!-- Latest compiled and minified CSS -->
@@ -52,7 +52,7 @@
         <section class="fullHeight" id="welcome">
             <div class="text-center vertical-center blockRel"> 
             <p class="bigText" id="name">Hey! I'm Amit</p>
-            <p class="secondHeadline" id="secondHeadline">I'm a computer science engineering student.</p>
+            <p class="secondHeadline" id="secondHeadline">I'm me.</p>
         </div>
         </section>
         <!-- <section id="description">
