--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section class="fullHeight" id="welcome">
             <div class="text-center vertical-center blockRel"> 
             <p class="bigText" id="name">Hey! I'm Amit</p>
-            <p class="secondHeadline" id="secondHeadline">I'm me.</p>
+            <p class="secondHeadline" id="secondHeadline">مرحبا انا اميت</p>
         </div>
         </section>
         <!-- <section id="description">
