--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <section id="footerSection" class="paddingToppedSmall">
             <div class="text-center paddingBottom">
                 <p class="iconFooter">
-                    <a href="https://www.linkedin.com/in/theamitjoseph/" class="a"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp;<a href="mailto:me@amitjoseph.com" class="b"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;<a href="http://github.com/amitjoseph" class="c"><i class="fa fa-github"></i></a>&nbsp;&nbsp;<a href="http://twitter.com/theamitjoseph" class="d"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;<a href="" class="e"><i class="fa fa-medium"></i></a></p>
+                    <a href="https://www.linkedin.com/in/theamitjoseph/" class="a"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp;<a href="mailto:me@amitjoseph.com" class="b"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;<a href="http://github.com/amitjoseph" class="c"><i class="fa fa-github"></i></a>&nbsp;&nbsp;<a href="http://twitter.com/theamitjoseph" class="d"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;<a href="https://blog.amitjoseph.com/" class="e"><i class="fa fa-blog"></i></a></p>
             </div>
             <div class="text-center">
                 <p class="footer">Amit Joseph <span id="yearfooter"></span></p>
